--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hi there
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Embedded Google Form</title>
+</head>
+<body>
+
+    <h1>Fill Out the Form Below</h1>
+
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdczBJnfNczsAK9Txukw7YCU6Vn1Q3JaETv40-BG3aaUkuu2w/viewform?embedded=true" 
+width="640" height="1308"
+ frameborder="0"
+ marginheight="0" marginwidth="0">Loading…</iframe>
+</body>
+</html>
