--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Embedded Google Form</title>
 </head>
+<style>
+    /* Hides the footer area */
+    iframe {
+        position: relative;
+    }
+    /* Overlay div to cover the footer */
+    .footer-overlay {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 50px; /* Adjust height based on footer size */
+        background-color: white;
+        z-index: 1;
+    }
+</style>
 <body>
 
     <h1>Fill Out the Form Below</h1>
