--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdczBJnfNczsAK9Txukw7YCU6Vn1Q3JaETv40-BG3aaUkuu2w/viewform?embedded=true" 
-width="640" height="1308"
+width="100%" height="100%"
  frameborder="0"
  marginheight="0" marginwidth="0">Loading…</iframe>
 </body>
