--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         position: absolute;
         bottom: 0;
         width: 100%;
-        height: 1250px; /* Adjust height based on footer size */
+        height: 800px; /* Adjust height based on footer size */
         background-color: white;
         z-index: 1;
     }
@@ -24,7 +24,7 @@
 
 
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdczBJnfNczsAK9Txukw7YCU6Vn1Q3JaETv40-BG3aaUkuu2w/viewform?embedded=true" 
-width="100%" height="100%"
+width="100%" height="900"
  frameborder="0"
  marginheight="0" marginwidth="0">Loading…</iframe>
 </body>
