--- a/tos.html
+++ b/tos.html
@@ -1,26 +1,68 @@
-Rental Terms and Conditions for Meta Ray-Ban Glasses
-Thank you for choosing LuluDiscover for your Meta Ray-Ban Glasses rental! Please read these terms carefully. By renting from us, you agree to the following terms and conditions.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rental Terms and Conditions</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            color: #333;
+        }
+        h1, h2 {
+            color: #1a73e8;
+        }
+        ul {
+            margin-left: 20px;
+        }
+    </style>
+</head>
+<body>
 
-1. Rental Agreement and Duration
-Rental Period: The minimum rental period is one day, starting from the agreed-upon date and time of delivery. Extensions are subject to availability and must be requested in advance.
-Daily Rate: The rental rate is $20 per day.
-2. Security Deposit
-A $200 security deposit will be required at the start of the rental period. This deposit will be held for the duration of the rental and refunded upon return of the glasses in their original condition, minus any applicable fees (e.g., damages or late fees).
-3. Identification Requirements
-You must provide a valid form of government-issued photo ID (either a National ID Card (CNI) or Driver’s License) at the time of rental. LuluDiscover reserves the right to retain a copy of the ID for our records.
-4. Credit Check Authorization
-By signing this agreement, you give LuluDiscover permission to perform a credit score check to verify eligibility for rental. Your information will be handled in accordance with our privacy policy and used solely for this purpose.
-5. Payment and Fees
-Payment: Rental fees and the security deposit must be paid in full at the start of the rental period.
-Late Returns: A late fee of $20 per day will apply for each day the equipment is returned after the agreed-upon date.
-Damage or Loss: Any damage to or loss of the Meta Ray-Ban glasses will be assessed, and the cost of repairs or replacement will be deducted from the security deposit. If costs exceed the deposit, the renter will be responsible for the additional amount.
-6. Proper Use of Equipment
-The Meta Ray-Ban glasses should be used only as intended and in accordance with all safety guidelines provided at the start of the rental.
-Prohibited Activities: Use of the glasses in hazardous environments, exposure to water or extreme weather, or any activity that may cause damage is prohibited.
-7. Liability and Indemnity
-LuluDiscover is not responsible for any injury, loss, or damages incurred while using the Meta Ray-Ban glasses. The renter assumes all responsibility for their use and agrees to indemnify LuluDiscover against claims arising from misuse or unauthorized actions.
-8. Privacy and Data Security
-LuluDiscover does not collect or store personal data recorded with the Meta Ray-Ban glasses during the rental period. Please delete any personal recordings or data before returning the equipment.
-9. Cancellation Policy
-Cancellation: Cancellations made 24 hours before the rental start date will be refunded in full. Cancellations made within 24 hours of the rental start date are non-refundable.
-By signing below, you agree to these Rental Terms and Conditions.
+    <h1>Rental Terms and Conditions for Meta Ray-Ban Glasses</h1>
+
+    <p>Thank you for choosing LuluDiscover for your Meta Ray-Ban Glasses rental! Please read these terms carefully. By renting from us, you agree to the following terms and conditions.</p>
+
+    <h2>1. Rental Agreement and Duration</h2>
+    <ul>
+        <li><strong>Rental Period:</strong> The minimum rental period is one day, starting from the agreed-upon date and time of delivery. Extensions are subject to availability and must be requested in advance.</li>
+        <li><strong>Daily Rate:</strong> The rental rate is $20 per day.</li>
+    </ul>
+
+    <h2>2. Security Deposit</h2>
+    <p>A <strong>$200 security deposit</strong> will be required at the start of the rental period. This deposit will be held for the duration of the rental and refunded upon return of the glasses in their original condition, minus any applicable fees (e.g., damages or late fees).</p>
+
+    <h2>3. Identification Requirements</h2>
+    <p>You must provide a valid form of government-issued photo ID (either a <strong>National ID Card (CNI)</strong> or <strong>Driver’s License</strong>) at the time of rental. LuluDiscover reserves the right to retain a copy of the ID for our records.</p>
+
+    <h2>4. Credit Check Authorization</h2>
+    <p>By signing this agreement, you give <strong>LuluDiscover</strong> permission to perform a <strong>credit score check</strong> to verify eligibility for rental. Your information will be handled in accordance with our privacy policy and used solely for this purpose.</p>
+
+    <h2>5. Payment and Fees</h2>
+    <ul>
+        <li><strong>Payment:</strong> Rental fees and the security deposit must be paid in full at the start of the rental period.</li>
+        <li><strong>Late Returns:</strong> A late fee of $20 per day will apply for each day the equipment is returned after the agreed-upon date.</li>
+        <li><strong>Damage or Loss:</strong> Any damage to or loss of the Meta Ray-Ban glasses will be assessed, and the cost of repairs or replacement will be deducted from the security deposit. If costs exceed the deposit, the renter will be responsible for the additional amount.</li>
+    </ul>
+
+    <h2>6. Proper Use of Equipment</h2>
+    <p>The Meta Ray-Ban glasses should be used only as intended and in accordance with all safety guidelines provided at the start of the rental.</p>
+    <p><strong>Prohibited Activities:</strong> Use of the glasses in hazardous environments, exposure to water or extreme weather, or any activity that may cause damage is prohibited.</p>
+
+    <h2>7. Liability and Indemnity</h2>
+    <p>LuluDiscover is not responsible for any injury, loss, or damages incurred while using the Meta Ray-Ban glasses. The renter assumes all responsibility for their use and agrees to indemnify LuluDiscover against claims arising from misuse or unauthorized actions.</p>
+
+    <h2>8. Privacy and Data Security</h2>
+    <p>LuluDiscover does not collect or store personal data recorded with the Meta Ray-Ban glasses during the rental period. Please delete any personal recordings or data before returning the equipment.</p>
+
+    <h2>9. Cancellation Policy</h2>
+    <ul>
+        <li><strong>Cancellation:</strong> Cancellations made 24 hours before the rental start date will be refunded in full. Cancellations made within 24 hours of the rental start date are non-refundable.</li>
+    </ul>
+
+    <h2>By signing below, you agree to these Rental Terms and Conditions.</h2>
+
+</body>
+</html>
