--- a/tos.html
+++ b/tos.html
@@ -3,66 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rental Terms and Conditions</title>
+    <title>Terms of Service - Lulu Discover</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-            color: #333;
-        }
-        h1, h2 {
-            color: #1a73e8;
-        }
-        ul {
-            margin-left: 20px;
-        }
+        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 20px; }
+        h1, h2 { color: #333; }
+        p { margin-bottom: 15px; }
     </style>
 </head>
 <body>
 
-    <h1>Rental Terms and Conditions for Meta Ray-Ban Glasses</h1>
+<h1>Terms of Service</h1>
+<p><strong>Effective Date:</strong> [Insert Date]</p>
 
-    <p>Thank you for choosing LuluDiscover for your Meta Ray-Ban Glasses rental! Please read these terms carefully. By renting from us, you agree to the following terms and conditions.</p>
+<p>Welcome to Lulu Discover! By accessing or using Lulu Discover’s services, you agree to comply with and be bound by these Terms of Service. Please read them carefully.</p>
 
-    <h2>1. Rental Agreement and Duration</h2>
-    <ul>
-        <li><strong>Rental Period:</strong> The minimum rental period is one day, starting from the agreed-upon date and time of delivery. Extensions are subject to availability and must be requested in advance.</li>
-        <li><strong>Daily Rate:</strong> The rental rate is $20 per day.</li>
-    </ul>
+<h2>1. Acceptance of Terms</h2>
+<p>By using Lulu Discover’s platform and services, you agree to these Terms of Service. If you do not agree, you may not access or use our services.</p>
 
-    <h2>2. Security Deposit</h2>
-    <p>A <strong>$200 security deposit</strong> will be required at the start of the rental period. This deposit will be held for the duration of the rental and refunded upon return of the glasses in their original condition, minus any applicable fees (e.g., damages or late fees).</p>
+<h2>2. Eligibility</h2>
+<ul>
+    <li>You must be at least 18 years of age or the legal age of majority in your jurisdiction to use Lulu Discover.</li>
+    <li>Lulu Discover reserves the right to refuse service to any individual at its sole discretion.</li>
+</ul>
 
-    <h2>3. Identification Requirements</h2>
-    <p>You must provide a valid form of government-issued photo ID (either a <strong>National ID Card (CNI)</strong> or <strong>Driver’s License</strong>) at the time of rental. LuluDiscover reserves the right to retain a copy of the ID for our records.</p>
+<h2>3. User Responsibilities</h2>
+<ul>
+    <li><strong>Account Security:</strong> Users are responsible for maintaining the confidentiality of their account information and are fully responsible for all activities that occur under their account.</li>
+    <li><strong>Accurate Information:</strong> Users agree to provide accurate, current, and complete information during the registration and verification processes.</li>
+    <li><strong>Compliance with Laws:</strong> Users must comply with all applicable laws, regulations, and these Terms when using Lulu Discover.</li>
+</ul>
 
-    <h2>4. Credit Check Authorization</h2>
-    <p>By signing this agreement, you give <strong>LuluDiscover</strong> permission to perform a <strong>credit score check</strong> to verify eligibility for rental. Your information will be handled in accordance with our privacy policy and used solely for this purpose.</p>
+<h2>4. Use of Services</h2>
+<ul>
+    <li><strong>Prohibited Conduct:</strong> Users agree not to engage in any unlawful, abusive, or harmful activities on the platform, including but not limited to fraud, harassment, and misuse of the services or devices.</li>
+    <li><strong>Device Handling:</strong> Users are responsible for the appropriate use and care of any devices obtained from Lulu Discover.</li>
+    <li><strong>Device Verification:</strong> Users agree that all devices obtained through Lulu Discover must be returned in the same condition as received, subject to standard wear and tear.</li>
+</ul>
 
-    <h2>5. Payment and Fees</h2>
-    <ul>
-        <li><strong>Payment:</strong> Rental fees and the security deposit must be paid in full at the start of the rental period.</li>
-        <li><strong>Late Returns:</strong> A late fee of $20 per day will apply for each day the equipment is returned after the agreed-upon date.</li>
-        <li><strong>Damage or Loss:</strong> Any damage to or loss of the Meta Ray-Ban glasses will be assessed, and the cost of repairs or replacement will be deducted from the security deposit. If costs exceed the deposit, the renter will be responsible for the additional amount.</li>
-    </ul>
+<h2>5. Payment and Fees</h2>
+<ul>
+    <li><strong>Charges:</strong> Fees associated with services, rentals, or other offerings will be clearly disclosed at the point of purchase or booking. Users agree to pay all applicable fees as specified.</li>
+    <li><strong>Changes in Fees:</strong> Lulu Discover reserves the right to change prices and fees with reasonable notice to users.</li>
+</ul>
 
-    <h2>6. Proper Use of Equipment</h2>
-    <p>The Meta Ray-Ban glasses should be used only as intended and in accordance with all safety guidelines provided at the start of the rental.</p>
-    <p><strong>Prohibited Activities:</strong> Use of the glasses in hazardous environments, exposure to water or extreme weather, or any activity that may cause damage is prohibited.</p>
+<h2>6. Disclaimer of Warranties</h2>
+<p>Lulu Discover provides services “as is” and “as available.” Lulu Discover makes no representations or warranties of any kind, express or implied, regarding the services, devices, or content provided.</p>
 
-    <h2>7. Liability and Indemnity</h2>
-    <p>LuluDiscover is not responsible for any injury, loss, or damages incurred while using the Meta Ray-Ban glasses. The renter assumes all responsibility for their use and agrees to indemnify LuluDiscover against claims arising from misuse or unauthorized actions.</p>
+<h2>7. Limitation of Liability</h2>
+<p>To the maximum extent permitted by law, Lulu Discover is not liable for any direct, indirect, incidental, or consequential damages arising out of or related to the use or inability to use the services or devices.</p>
 
-    <h2>8. Privacy and Data Security</h2>
-    <p>LuluDiscover does not collect or store personal data recorded with the Meta Ray-Ban glasses during the rental period. Please delete any personal recordings or data before returning the equipment.</p>
+<h2>8. Third-Party Disclaimer</h2>
+<p>Lulu Discover is an independent service and is not affiliated with, endorsed by, or associated with Meta, Facebook, Ray-Ban, or Luxottica Group S.p.A. All trademarks, product names, and company names or logos mentioned are the property of their respective owners.</p>
 
-    <h2>9. Cancellation Policy</h2>
-    <ul>
-        <li><strong>Cancellation:</strong> Cancellations made 24 hours before the rental start date will be refunded in full. Cancellations made within 24 hours of the rental start date are non-refundable.</li>
-    </ul>
+<h2>9. Termination</h2>
+<ul>
+    <li><strong>User-Initiated Termination:</strong> Users may terminate their account at any time.</li>
+    <li><strong>Lulu Discover-Initiated Termination:</strong> Lulu Discover reserves the right to terminate or suspend any user’s access to the service at its discretion, including, but not limited to, violations of these Terms or other policies.</li>
+</ul>
 
-    <h2>By signing below, you agree to these Rental Terms and Conditions.</h2>
+<h2>10. Changes to Terms</h2>
+<p>Lulu Discover reserves the right to modify these Terms at any time. Any changes will be posted on the website, and continued use of the services after changes are posted constitutes acceptance of the revised Terms.</p>
+
+<h2>11. Governing Law</h2>
+<p>These Terms shall be governed by and construed in accordance with the laws of Ontario, Canada.</p>
+
+<p>For further details or questions regarding these Terms of Service, please contact us at <a href="mailto:hello@luludiscover.com">hello@luludiscover.com</a>.</p>
+
+<p><strong>Thank you for choosing Lulu Discover!</strong></p>
 
 </body>
 </html>
+
