--- a/rental-agreement.html
+++ b/rental-agreement.html
@@ -13,7 +13,7 @@
 <body>
 
 <h1>Rental Agreement</h1>
-<p><strong>Effective Date:</strong> [Insert Date]</p>
+<p><strong>Effective Date:</strong>11/01/2024</p>
 
 <p>This Rental Agreement (“Agreement”) outlines the terms and conditions under which Lulu Discover (“we,” “us,” “our”) provides rental devices (“device” or “devices”) to the renter (“you,” “your”). By renting any device from Lulu Discover, you agree to these terms.</p>
 
