--- a/privacy.html
+++ b/privacy.html
@@ -13,7 +13,7 @@
 <body>
 
 <h1>Privacy Policy</h1>
-<p><strong>Effective Date:</strong> [Insert Date]</p>
+<p><strong>Effective Date:</strong>11/01/2024</p>
 
 <p>Lulu Discover (“we,” “us,” “our”) respects your privacy and is committed to protecting your personal information. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our services.</p>
 
