--- a/tos.html
+++ b/tos.html
@@ -13,7 +13,7 @@
 <body>
 
 <h1>Terms of Service</h1>
-<p><strong>Effective Date:</strong> [Insert Date]</p>
+<p><strong>Effective Date:</strong>11/01/2024</p>
 
 <p>Welcome to Lulu Discover! By accessing or using Lulu Discover’s services, you agree to comply with and be bound by these Terms of Service. Please read them carefully.</p>
 
